# pages-parser

./: .gitignore  CHANGELOG.md  Makefile  README.md  log.txt  pyproject.toml  requirements.txt  run.py
db/: create_table.sql
docs/: schema.drawio
infra/: Dockerfile  docker-compose.yml
infra/db/: create_table.sql
scripts/: create-db-container.sh
src/api/: api.py
src/db/: connector.py
src/db/crud/: crud.py
src/db/models/: models.py
src/db/schemas/: schemas.py
src/scheduler/: scheduler.py
src/tasks/: tasks.py
